--- a/ocParadise/views/new.ejs
+++ b/ocParadise/views/new.ejs
@@ -1,6 +1,88 @@
 <%-include('./partials/header.ejs')%>
+<link href="/css/styleNew.css" type="text/css" rel="stylesheet"> 
+</head>
+<body>
+<a href="/ocparadise"><img src="https://i.imgur.com/m7kJuH2.png" alt="logo" class="logo"></a>
+
+<h1>New is Up</h1>
+<nav>
+</nav> <br>
+<div class="background">
+<div class="container">
+<div class="content">
+<form action="/ocparadise" method="POST">
+    <label for="name">Name</label>
+    <input type="text" placeholder="Character Name" name="name" id="name"/><br><br>
+    <label for="image">Image URL:</label>
+    <input type="text" id="image" name="image" value="https://i.imgur.com/9avnz3D.png" style="color:rgba(128, 128, 128, 0.627)"><br><br>
+  
+    <label for="birthday">Birthday:</label>
+    <input type="text" id="birthday" name="birthday"><br>
+  
+    <label for="zodiac">Zodiac:</label>
+    <select id="zodiac" name="zodiac">
+      <option value="">Select a zodiac sign</option>
+      <option value="Aries">Aries</option>
+      <option value="Taurus">Taurus</option>
+      <option value="Gemini">Gemini</option>
+      <option value="Cancer">Cancer</option>
+      <option value="Leo">Leo</option>
+      <option value="Virgo">Virgo</option>
+      <option value="Libra">Libra</option>
+      <option value="Scorpio">Scorpio</option>
+      <option value="Sagittarius">Sagittarius</option>
+      <option value="Capricorn">Capricorn</option>
+      <option value="Aquarius">Aquarius</option>
+      <option value="Pisces">Pisces</option>
+    </select><br>
+  
+    <label for="birthplace">Birthplace:</label>
+    <input type="text" id="birthplace" name="birthplace"><br>
+  
+    <label for="bio">Bio:</label>
+    <textarea id="bio" name="bio"></textarea><br>
+  
+    <label for="idiosyncrasy">Idiosyncrasy:</label>
+    <textarea id="idiosyncrasy" name="idiosyncrasy"></textarea><br>
+  
+    <label for="personality">Personality:</label>
+    <textarea id="personality" name="personality"></textarea><br>
+  
+    <label for="relationships">Relationships:</label>
+    <textarea id="relationships" name="relationships"></textarea><br>
+  
+    <label for="goalsMotivations">Goals and Motivations:</label>
+    <textarea id="goalsMotivations" name="goalsMotivations"></textarea><br>
+  
+    <label for="fearsWeakness">Fears and Weakness:</label>
+    <textarea id="fearsWeakness" name="fearsWeakness"></textarea><br>
+  
+    <label for="skills">Skills:</label>
+    <textarea id="skills" name="skills"></textarea><br>
+  
+    <label for="mostTreasured">Most Treasured:</label>
+    <textarea id="mostTreasured" name="mostTreasured"></textarea><br>
+  
+    <label for="askForPermissionToUse">Ask for permission to use:</label>
+    <input type="checkbox"  style="text-align: left;" id="askForPermissionToUse" name="askForPermissionToUse"><br>
+    
+    <label for="originalCreator">Original Creator:</label>
+    <input type="text" id="originalCreator" name="originalCreator"><br>
+  
+     <label for="instaLink">Instagram:</label>
+    <input type="text" id="instaLink" name="instaLink"><br>
+  
+    <label for="twitterLink">Twitter:</label>
+    <input type="text" id="twitterLink" name="twitterLink"><br>
+  
+    <label for="tikTokLink">Tiktok:</label>
+    <input type="text" id="tikTokLink" name="tikTokLink"><br>
 
 
 
+
+    
+    <button type="submit">Submit</button>
+</form>
 
 <%-include('./partials/footer.ejs')%>
