--- a/ocParadise/public/css/styleIndex.css
+++ b/ocParadise/public/css/styleIndex.css
@@ -133,7 +133,6 @@ chara-profile{
 }
 
 nav button{
-  z-index: 0;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -155,4 +154,16 @@ nav button a{
   height: 300px;
   width: auto;
   z-index: 0;
+}
+
+@media (max-width: 768px) {
+  .container {
+    height: auto;
+    width: 100%;
+  }
+  
+  .content {
+    position: relative;
+    padding: 10px;
+  }
 }
