--- a/ocParadise/public/css/styleNew.css
+++ b/ocParadise/public/css/styleNew.css
@@ -70,10 +70,10 @@ ul,li
 
 
   h1{
+    color: rgb(221, 214, 204);
     font-family: 'Fascinate', cursive;
     font-size: 50px;
     text-align: center;
-    color: rgb(221, 214, 204);
     top: - 50px
 }
 
@@ -133,6 +133,7 @@ textarea{
     font-family: 'Nanum Pen Script', cursive;
     font-size: 18px;
     width: 400px;
+    opacity: 50%;
 
 }
 
@@ -140,18 +141,22 @@ input{
     font-family: 'Nanum Pen Script', cursive;
     font-size: 18px;
     width: 400px;
-
+    opacity: 50%;
 
 }
 
 select{
     font-family: 'Nanum Pen Script', cursive;
     font-size: 18px;
+    opacity: 50%;
 }
 
 .submit{
-right: 50px
-}
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  z-index: 0;}
 
 nav button{
   z-index: 0;
@@ -170,4 +175,33 @@ nav button{
   height: 300px;
   width: auto;
   z-index: 0;
+}
+
+/* .permission-container {
+  display: flex;
+  align-items: center;
+} */
+
+label[for="askForPermissionToUse"] {
+  display: inline-block;
+  width: 1020px; /* adjust width as needed */
+}
+
+input#askForPermissionToUse {
+  display: inline;
+}
+
+input[type="checkbox"] {
+  transform: scale(1.5);
+}
+@media (max-width: 768px) {
+  .container {
+    height: auto;
+    width: 100%;
+  }
+  
+  .content {
+    position: relative;
+    padding: 10px;
+  }
 }
