--- a/ocParadise/views/new.ejs
+++ b/ocParadise/views/new.ejs
@@ -2,22 +2,22 @@
 <link href="/css/styleNew.css" type="text/css" rel="stylesheet"> 
 </head>
 <body>
-<a href="/ocparadise"><img src="https://i.imgur.com/m7kJuH2.png" alt="logo" class="logo"></a>
+<a href="/ocparadise"><img src="https://i.imgur.com/ZZD5u3W.png" alt="logo" class="logo"></a>
 
-<h1>New is Up</h1>
 <nav>
 </nav> <br>
 <div class="background">
 <div class="container">
 <div class="content">
 <form action="/ocparadise" method="POST">
+    <br>
     <label for="name">Name</label>
-    <input type="text" placeholder="Character Name" name="name" id="name"/><br><br>
+    <input type="text" placeholder="Character name" name="name" id="name"/><br><br>
     <label for="image">Image URL:</label>
     <input type="text" id="image" name="image" value="https://i.imgur.com/9avnz3D.png" style="color:rgba(128, 128, 128, 0.627)"><br><br>
   
     <label for="birthday">Birthday:</label>
-    <input type="text" id="birthday" name="birthday"><br>
+    <input type="text" placeholder="Birthday" id="birthday" name="birthday"><br>
   
     <label for="zodiac">Zodiac:</label>
     <select id="zodiac" name="zodiac">
@@ -37,51 +37,49 @@
     </select><br>
   
     <label for="birthplace">Birthplace:</label>
-    <input type="text" id="birthplace" name="birthplace"><br>
+    <input type="text" placeholder="Birth place" id="birthplace" name="birthplace"><br>
   
     <label for="bio">Bio:</label>
-    <textarea id="bio" name="bio"></textarea><br>
+    <textarea id="bio" placeholder="Tell us something about your character" name="bio"></textarea><br>
   
     <label for="idiosyncrasy">Idiosyncrasy:</label>
-    <textarea id="idiosyncrasy" name="idiosyncrasy"></textarea><br>
+    <textarea id="idiosyncrasy" placeholder="What makes them, them?" name="idiosyncrasy"></textarea><br>
   
     <label for="personality">Personality:</label>
-    <textarea id="personality" name="personality"></textarea><br>
+    <textarea id="personality" placeholder="What are they like?" name="personality"></textarea><br>
   
     <label for="relationships">Relationships:</label>
-    <textarea id="relationships" name="relationships"></textarea><br>
+    <textarea id="relationships" placeholder="Who do they care about?" name="relationships"></textarea><br>
   
     <label for="goalsMotivations">Goals and Motivations:</label>
-    <textarea id="goalsMotivations" name="goalsMotivations"></textarea><br>
+    <textarea id="goalsMotivations" placeholder="What drives them?" name="goalsMotivations"></textarea><br>
   
     <label for="fearsWeakness">Fears and Weakness:</label>
-    <textarea id="fearsWeakness" name="fearsWeakness"></textarea><br>
+    <textarea id="fearsWeakness" placeholder="What are they afraid of or is their weakness?" name="fearsWeakness"></textarea><br>
   
     <label for="skills">Skills:</label>
-    <textarea id="skills" name="skills"></textarea><br>
+    <textarea id="skills" placeholder="What are their strengths and skills?" name="skills"></textarea><br>
   
     <label for="mostTreasured">Most Treasured:</label>
-    <textarea id="mostTreasured" name="mostTreasured"></textarea><br>
+    <textarea id="mostTreasured" placeholder="What do they hold dear?" name="mostTreasured"></textarea><br>
   
-    <label for="askForPermissionToUse">Ask for permission to use:</label>
-    <input type="checkbox"  style="text-align: left;" id="askForPermissionToUse" name="askForPermissionToUse"><br>
+    <label for="askForPermissionToUse">Ask for permission to use in a personal or non-commercial work:</label>
+    <div class="permission-container">
+        <input type="checkbox" id="askForPermissionToUse" name="askForPermissionToUse">
+    </div>
     
     <label for="originalCreator">Original Creator:</label>
-    <input type="text" id="originalCreator" name="originalCreator"><br>
+    <input type="text" placeholder="What's your handle or name?" id="originalCreator" name="originalCreator"><br>
   
      <label for="instaLink">Instagram:</label>
-    <input type="text" id="instaLink" name="instaLink"><br>
+    <input type="text" placeholder="Instagram URL" id="instaLink" name="instaLink"><br>
   
     <label for="twitterLink">Twitter:</label>
-    <input type="text" id="twitterLink" name="twitterLink"><br>
+    <input type="text" placeholder="Twitter URL" id="twitterLink" name="twitterLink"><br>
   
     <label for="tikTokLink">Tiktok:</label>
-    <input type="text" id="tikTokLink" name="tikTokLink"><br>
+    <input type="text" placeholder="TikTok URL" id="tikTokLink" name="tikTokLink"><br>
 
-
-
-
-    
     <button type="submit">Submit</button>
 </form>
 
