--- a/ocParadise/views/new.ejs
+++ b/ocParadise/views/new.ejs
@@ -80,7 +80,7 @@
     <label for="tikTokLink">Tiktok:</label>
     <input type="text" placeholder="TikTok URL" id="tikTokLink" name="tikTokLink"><br>
 
-    <button type="submit">Submit</button>
-</form>
+    <input type="submit" name="" value="Add Chara" />
+  </form>
 
 <%-include('./partials/footer.ejs')%>
