--- a/ocParadise/views/show.ejs
+++ b/ocParadise/views/show.ejs
@@ -27,8 +27,8 @@
         <li><strong style="font-size: 30px;">Fears and Weaknesses:</strong> <p><%= chara.fearsWeakness %></p></li><br>
         <li><strong style="font-size: 30px;">Skills:</strong> <p><%= chara.skills %></p></li><br>
         <li><strong style="font-size: 30px;">Most Treasured Possession:</strong> <p><%= chara.mostTreasured %></p></li><br>
-      <li><strong style="font-size: 30px;">Ask for permission to use in a personal or noncommercial work:</strong> <%= chara.askForPermissionToUse ? "Yes" : "No" %></li><br>
-      <li><strong style="font-size: 30px;">Original creator:</strong ><%= chara.originalCreator %></li><br>
+      <li><strong style="font-size: 30px;"><p style="font-size: 30px;">Ask for permission to use in a personal or noncommercial work:</p></strong><%= chara.askForPermissionToUse ? "Yes" : "No" %></li><br>
+      <li><strong style="font-size: 30px;">Original creator:</strong><%= chara.originalCreator %></li><br>
       </ul><br>
       <div class="socials">
         <a href="<%= chara.instagram %>"><img src="https://i.imgur.com/H9kKCjc.png" style="height: 60px; width: auto;"></a>
