--- a/ocParadise/public/css/styleEdit.css
+++ b/ocParadise/public/css/styleEdit.css
@@ -2,6 +2,7 @@
 .container {
     position: relative; /* set position to relative */
     overflow-y: scroll; /* enable vertical scrolling */
+    overflow-x:scroll;
     height: 600px; /* set a fixed height for the container */
     width: 1200px;;
     text-align: center;
@@ -145,14 +146,127 @@ nav button{
   width: auto;
   z-index: 0;
 }
+
 @media (max-width: 768px) {
   .container {
-    height: auto;
-    width: 100%;
+  overflow-y: auto;
+  width: 100%;
+  overflow-x:scroll;
+  overflow-x: auto;
   }
-  
-  .content {
-    position: relative;
-    padding: 10px;
+
+
+.content {
+  position: relative;
+  padding: 10px;
+}
+.logo{
+  height: 150px;
+  width: auto;
+  position: absolute;
+  top:20px;
+  left: -20px;
+}
+h1 {
+  display: none;
+}
+
+nav button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  z-index: 0;
+  font-family: 'Fascinate', cursive;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+}
+
+
+@media (max-width: 768px) {
+  .container {
+      overflow-y: auto;
+      max-height: 400px; /* adjust to your desired max height */
   }
+
+
+.content {
+  position: relative;
+  padding: 10px;
+}
+.logo{
+  height: 150px;
+  width: auto;
+  position: absolute;
+  top:20px;
+  left: -20px;
+}
+h1 {
+  display: none;
+}
+
+nav button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  z-index: 0;
+  font-family: 'Fascinate', cursive;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+}
+
+@media (max-width: 768px) {
+.container {
+overflow-y: auto;
+width: 100%;
+top: 55px;
+}
+
+
+.content {
+position: relative;
+top: 55px;
+
+}
+.logo{
+height: 150px;
+width: auto;
+position: absolute;
+top:20px;
+left: -20px;
+}
+/* h1 {
+display: none;
+} */
+
+nav button{
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
+z-index: 0;
+font-family: 'Fascinate', cursive;
+border-radius: 10px;
+margin-top: 20px;
+}
+
+.charaInfo p{
+word-wrap: break-word !important;
+white-space: pre-wrap;
+size: 600px;
+font-size: 23px;
+color: rgb(83, 62, 54);
+}
+
+p{
+width: 450px;
+word-wrap: break-word !important;
+max-width: 450px;
+}
+
 }
