--- a/ocParadise/public/css/styleIndex.css
+++ b/ocParadise/public/css/styleIndex.css
@@ -1,7 +1,7 @@
 
 .container {
     position: relative; /* set position to relative */
-    overflow-y: scroll; /* enable vertical scrolling */
+    overflow-y: auto; /* enable vertical scrolling */
     height: 600px; /* set a fixed height for the container */
     width: 1200px;;
     text-align: center;
@@ -79,8 +79,6 @@ ul,li
     line-height: 1;
 }
 
-
-
 body{
     font-family: 'Nanum Pen Script', cursive;
     font-size: 20px;
@@ -136,7 +134,7 @@ nav button{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 20%;
+  width: 50%;
   z-index: 0;
   font-family: 'Fascinate', cursive;
   border-radius: 10px;
@@ -156,14 +154,40 @@ nav button a{
   z-index: 0;
 }
 
+
+
 @media (max-width: 768px) {
-  .container {
-    height: auto;
+    .container {
+    overflow-y: auto;
     width: 100%;
-  }
+    }
+
   
   .content {
     position: relative;
     padding: 10px;
   }
+  .logo{
+    height: 150px;
+    width: auto;
+    position: absolute;
+    top:20px;
+    left: -20px;
+  }
+  h1 {
+    display: none;
+  }
+
+  nav button{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    z-index: 0;
+    font-family: 'Fascinate', cursive;
+    border-radius: 10px;
+    margin-top: 20px;
+  }
+
 }
+
