--- a/ocParadise/public/css/styleNew.css
+++ b/ocParadise/public/css/styleNew.css
@@ -30,34 +30,6 @@
     z-index: -1; /* set a z-index to make sure background is behind content */
   }
 
-/* (A) RESPONSIVE IMAGE */
-/* .fullwrap img { width: 100%; } */
-.fullwrap {
-  max-width: 250px; /* optional */
-  position: relative; /* required for (b1) */
-}
- 
-/* (B) POSITION CAPTION */
-.fullcap {
-  /* (B1) COVER OVER ENTIRE IMAGE */
-  position: absolute; top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 150px;
-
-  /* (B2) CENTER CONTENT */
-  display: flex; justify-content: center; align-items: center;
-}
- 
-/* (C) ONLY SHOW CAPTION ON HOVER */
-.fullcap {
-  visibility: none; opacity: 0;
-  transition: opacity 0.3s;
-}
-.fullwrap:hover .fullcap {
-  visibility: visible; opacity: 1;
-}
-
 ul {
     white-space: nowrap;
   }
@@ -204,4 +176,91 @@ input[type="checkbox"] {
     position: relative;
     padding: 10px;
   }
+}
+
+
+@media (max-width: 768px) {
+    .container {
+        overflow-y: auto;
+        max-height: 400px; /* adjust to your desired max height */
+    }
+
+  
+  .content {
+    position: relative;
+    padding: 10px;
+  }
+  .logo{
+    height: 150px;
+    width: auto;
+    position: absolute;
+    top:20px;
+    left: -20px;
+  }
+  h1 {
+    display: none;
+  }
+
+  nav button{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    z-index: 0;
+    font-family: 'Fascinate', cursive;
+    border-radius: 10px;
+    margin-top: 20px;
+  }
+
+}
+
+@media (max-width: 768px) {
+  .container {
+  overflow-y: auto;
+  width: 100%;
+  top: 55px;
+  }
+
+
+.content {
+  position: relative;
+  top: 55px;
+
+}
+.logo{
+  height: 150px;
+  width: auto;
+  position: absolute;
+  top:20px;
+  left: -20px;
+}
+/* h1 {
+  display: none;
+} */
+
+nav button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  z-index: 0;
+  font-family: 'Fascinate', cursive;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.charaInfo p{
+  word-wrap: break-word !important;
+  white-space: pre-wrap;
+  size: 600px;
+  font-size: 23px;
+  color: rgb(83, 62, 54);
+}
+
+p{
+  width: 450px;
+  word-wrap: break-word !important;
+  max-width: 450px;
+}
+
 }
