--- a/ocParadise/views/new.ejs
+++ b/ocParadise/views/new.ejs
@@ -63,7 +63,7 @@
     <label for="mostTreasured">Most Treasured:</label>
     <textarea id="mostTreasured" placeholder="What do they hold dear?" name="mostTreasured"></textarea><br>
   
-    <label for="askForPermissionToUse">Ask for permission to use in a personal or non-commercial work:</label>
+    <label for="askForPermissionToUse"><p style="">Ask for permission to use in a personal or non-commercial work:</p></label>
     <div class="permission-container">
         <input type="checkbox" id="askForPermissionToUse" name="askForPermissionToUse">
     </div>
@@ -71,14 +71,14 @@
     <label for="originalCreator">Original Creator:</label>
     <input type="text" placeholder="What's your handle or name?" id="originalCreator" name="originalCreator"><br>
   
-     <label for="instaLink">Instagram:</label>
-    <input type="text" placeholder="Instagram URL" id="instaLink" name="instaLink"><br>
+     <label for="instagram">Instagram:</label>
+    <input type="text" placeholder="Instagram URL" id="instagram" name="instagram"><br>
   
-    <label for="twitterLink">Twitter:</label>
-    <input type="text" placeholder="Twitter URL" id="twitterLink" name="twitterLink"><br>
+    <label for="twitter">Twitter:</label>
+    <input type="text" placeholder="Twitter URL" id="twitter" name="twitter"><br>
   
-    <label for="tikTokLink">Tiktok:</label>
-    <input type="text" placeholder="TikTok URL" id="tikTokLink" name="tikTokLink"><br>
+    <label for="tiktok">Tiktok:</label>
+    <input type="text" placeholder="TikTok URL" id="tiktok" name="tiktok"><br>
 
     <input type="submit" name="" value="Add Chara" />
   </form>
