--- a/ocParadise/views/show.ejs
+++ b/ocParadise/views/show.ejs
@@ -33,7 +33,7 @@
       <div class="socials">
         <a href="<%= chara.instagram %>"><img src="https://i.imgur.com/H9kKCjc.png" style="height: 60px; width: auto;"></a>
           <a href="<%= chara.twitter %>"><img src="https://i.imgur.com/l2klKbq.png" style="height: 60px; width: auto;;"></a>
-            <a href="<%= chara.tictok %>"><img src="https://i.imgur.com/7I76iOT.png" style="height: 60px; width: auto;"></a>
+            <a href="<%= chara.tiktok %>"><img src="https://i.imgur.com/7I76iOT.png" style="height: 60px; width: auto;"></a>
         </div>
 
 </div>
